<resources>
    <string name="app_name">Reservas System</string>
    <string name="label_login">Inicio de Sesion</string>
    <string name="label_email">Email</string>
    <string name="label_password">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_go_to_register">Aun no te haz registrado?</string>
    <string name="label_register">Registro</string>
    <string name="label_name">Nombre Completo</string>
    <string name="btn_register">Confirmar Registro</string>
    <string name="label_go_to_login">Ya tienes una Cuenta?</string>
    <string name="please_fill_your_register_data">Por favor completa tus datos de registro</string>
    <string name="btn_create_appointment">Reservar Cita</string>
    <string name="btn_my_appointment">Mis Citas</string>
    <string name="btn_log_out">Cerrar Sesion</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar Cita</string>
    <string name="label_description">Descripcion</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_type">Tipo de Cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operacion</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Medico</string>
    <string name="label_scheduled_date">Fecha para la cita</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="item_appointment_id">Cita Medica %1$d </string>
    <string name="item_appointment_date">Para el dia %1$s </string>
    <string name="item_appointment_time">A las %1$s </string>
    <string name="my_appointments">Mis Citas Medicas</string>
    <string name="press_back_again">Presione una vez mas para salir</string>
    <string name="dialog_create_appointment_exit_title">Estas seguro que deseas salir</string>
    <string name="dialog_create_appointment_exit_message">Si abandonas el registro los datos ingresados se perderan</string>
    <string name="dialog_create_appointment_exit_positive_btn">\"Si, Salir \"</string>
    <string name="dialog_create_appointment_exit_negative_btn">\"Continuar con el registro \"</string>
    <string name="validate_appointment_description">La descripcion es demasiado corta</string>
</resources>
