<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    tools:context=".MainActivity">

    <TextView
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/big_gradient"
        android:gravity="center_horizontal"
        android:text="@string/label_login"
        android:textColor="@color/colorwhite"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
<LinearLayout
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:padding="14dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/colorwhite"
        android:text="@string/label_email" />

    <EditText
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:textColor="@color/colorwhite"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textColor="@color/colorwhite"
        android:text="@string/label_password" />

    <EditText
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:textColor="@color/colorwhite"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorwhite"

        android:text="@string/btn_login" />

    <TextView
        android:id="@+id/tvGoToRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"

        android:layout_marginBottom="18dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorwhite"
        android:text="@string/label_go_to_register" />
</LinearLayout>
</LinearLayout>