<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/big_gradient"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".MenuActivity">

    <TextView
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:gravity="center_horizontal"
        android:text="@string/label_welcome"
        android:textColor="@color/colorwhite"
         />


        <Button
            android:id="@+id/BtnCreateAppointment"
            android:layout_width="match_parent"
            android:layout_marginTop="12dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorwhite"
            android:drawableStart="@drawable/ic_add_circle"
            android:paddingLeft="90dp"
            android:paddingRight="90dp"
            style="@style/MenuButton"
            android:text="@string/btn_create_appointment" />

        <Button
            android:id="@+id/BtnMyAppointment"
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_schedule"
            android:layout_marginTop="12dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorwhite"

            style="@style/MenuButton"
            android:text="@string/btn_my_appointment" />


        <Button
            android:id="@+id/BtnLogout"
            android:layout_width="match_parent"

            android:layout_marginTop="12dp"
            android:drawableStart="@drawable/ic_power_off"

            android:background="@color/colorAccent"
            android:textColor="@color/colorwhite"
            style="@style/MenuButton"
            android:text="@string/btn_log_out" />



</LinearLayout>