<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/big_gradient"
    android:gravity="center"
    android:padding="10dp"
    android:animateLayoutChanges="true"
    tools:context=".CreateAppointmentActivity">

    <TextView
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:gravity="center_horizontal"
        android:text="@string/label_create_appointment"
        android:textColor="@color/colorwhite"
        />
    <android.support.v7.widget.CardView
        android:id="@+id/cvStep1"
        app:contentPadding="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:text="@string/label_description"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

            <TextView
                android:text="@string/label_specialty"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
            <Spinner
                android:id="@+id/spinnerSpecialties"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></Spinner>

            <TextView
                android:text="@string/label_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="8dp"
                >
                <RadioButton
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type1"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type2"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type3" />
            </RadioGroup>
            <Button
                android:id="@+id/BtnNext"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:drawableEnd="@drawable/ic_next"
                android:background="@color/colorAccent"
                android:textColor="@color/colorwhite"
                style="@style/MenuButton"
                android:text="@string/btn_next" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cvStep2"
        android:visibility="gone"
        app:contentPadding="12dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <android.support.v4.widget.NestedScrollView
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               >
               <TextView
                   android:text="@string/label_doctor"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
               </TextView>
               <Spinner
                   android:id="@+id/spinnerDoctor"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"></Spinner>
               <TextView
                   android:text="@string/label_scheduled_date"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content">
               </TextView>
               <EditText

                   android:id="@+id/etScheduleDate"
                   android:onClick="onClickScheduledDate"
                    android:inputType="date"
                   android:focusable="false"
                   android:clickable="true"
                   android:maxLines="1"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">

               </EditText>
               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal">
                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_weight="1"
                       android:layout_height="wrap_content"
                       android:orientation="vertical"
                       android:layout_marginBottom="8dp"
                       android:id="@+id/radioGroupLeft"
                       >
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="8:00 AM"/>

                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="8:00 AM"/>
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="8:00 AM"/>

                   </LinearLayout>
                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_weight="1"
                       android:layout_height="wrap_content"
                       android:orientation="vertical"
                       android:layout_marginBottom="8dp"
                       android:id="@+id/radioGroupRight"

                       >
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="8:00 AM"/>

                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="8:00 AM"/>
                       <RadioButton
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="8:00 AM"/>

                   </LinearLayout>
               </LinearLayout>

               <Button
                   android:id="@+id/BtnConfirmAppointment"
                   android:layout_width="match_parent"
                   android:layout_marginTop="12dp"
                   android:drawableEnd="@drawable/ic_confirm"
                   android:background="@color/colorAccent"
                   android:textColor="@color/colorwhite"
                   style="@style/MenuButton"
                   android:text="@string/btn_confirm" />
           </LinearLayout>
       </android.support.v4.widget.NestedScrollView>

    </android.support.v7.widget.CardView>


</LinearLayout>